--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -23,8 +23,10 @@
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "react-window": "^1.8.11",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.8.1",
