--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.5",
     "socket.io": "^4.8.1",
     "stripe": "^18.4.0",
     "uuid": "^11.1.0",
@@ -42,6 +43,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.1.0",
+    "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.32.0",
