--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,7 +16,9 @@
     "apexcharts": "^5.3.1",
     "axios": "^1.11.0",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "moment": "^2.30.1",
+    "nodemailer": "^7.0.5",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
